<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMCálculo</string>
    <string name="hello_world">Hello world!</string>
    <string name="inicio">Bienvenido</string>
    <string name="ip">Introduce tu IP o dominio</string>
    <string name="ip2">IP o dominio</string>
    <string name="ip3">Escribe la IP del servidor</string>
    <string name="menu_help">Ayuda</string>
    <string name="puerto">Introduce el puerto</string>
    <string name="puerto2">Puerto</string>
    <string name="puerto3">Escribe el puerto del servicio</string>
    <string name="user">Introduce tu usuario</string>
    <string name="user2">Usuario</string>
    <string name="user3">Escribe tu usuario</string>
    <string name="operacion">Introduce un número</string>
    <string name="pass">Introduce tu contraseña</string>
    <string name="pass2">Contraseña</string>
    <string name="pass3">Escribe tu contraseña</string>
    <string name="action_settings">Configuración</string>
    <string name="conect">Conecta</string>
    <string name="help_uja">Universidad de Jaén</string> 
    <string name="help_title">Ayuda de la aplicación SMCálculo</string>
    <string name="help_text">Esta es una aplicación de la asignatura,
		Servicios Móviles del Grado de Ingeniería Telemática de la Universidad de Jaén
		realizada por Sergio Díaz Fuentes y Javier Montoro Salas.
</string>
<string name="help_contents">Contenido</string>
<string name="help_content_p1">En esta aplicación se podrán realizar senos y cosenos
    en grados sexagesimales.</string>
    <string name="operaciones">Operaciones</string>
    <string name="seno">Seno</string>
    <string name="coseno">Coseno</string>
    <string name="Fichero">Fichero</string>
    <string name="Etiqueta">Etiqueta</string>
    <string name="Valor">Valor</string>
    <string name="historico">Histórico</string>
    <string name="salir">Salir</string>
    <string name="finapp">¿Salir?</string>
    <string name="Almacenamiento">Almacenamiento</string>
    <string name="Interno">Interno</string>
    <string name="BaseDatos">Base de Datos</string>
    <string name="fichero_result">result</string>
    <string name="grabar">Grabar</string>
    <string name="cargar">Leer</string>
    <string name="toast_saved">Datos guardados</string>
    <string name="toast_error">Error</string>
    <string name="toast_loaded">Datos cargados</string>
    <string name="conectando">Conectando</string>
    <string name="nouser">Usuario no existente</string>
    <string name="nopass">Password incorrecta</string>

</resources>
