<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Beige" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/LinearLayout" >

        <FrameLayout
            style="@style/FramesLand"
            android:padding="8dp" >

            <LinearLayout
                style="@style/LinearLayout"
                android:gravity="center_vertical" >
                
                 <TextView
        android:id="@+id/help_textView_title"
        style="@style/TextView"
        android:text="@string/help_title"
        android:textColor="@color/Chocolate"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/help_textView_text"
		style="@style/TextView"
		android:padding="8dp"
        android:text="@string/help_text"
        android:textColor="@color/darkblue" />
                
            </LinearLayout>
         
        </FrameLayout>

        <FrameLayout
            style="@style/FramesLand"
            android:padding="8dp" >

            <LinearLayout
                style="@style/LinearLayout" >
    
                 <TextView
                     android:id="@+id/panel_textView_title"
                     style="@style/TextView"
                     android:text="@string/help_contents"
                     android:textColor="@color/Chocolate"
                     android:textSize="20sp" />
                 
                  <TextView
        android:id="@+id/panel_textView_text"
        style="@style/TextView"
        android:padding="8dp"
        android:text="@string/help_content_p1"
        android:textColor="@color/darkblue" />
                
            </LinearLayout>
            
        </FrameLayout>

    </LinearLayout>
    
    <TextView style="@style/TextViewFoot" />

</RelativeLayout>